group name is bold and colored

--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -21,6 +21,7 @@
 
         <LinearLayout
             android:padding="15sp"
+            android:layout_marginTop="20sp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
